added udp client

--- a/src/Client/Client.csproj
+++ b/src/Client/Client.csproj
@@ -51,5 +51,11 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Server\Server.csproj">
+      <Project>{8e413c84-cf1d-430f-a677-a859dccf7c7c}</Project>
+      <Name>Server</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
